[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/game/jobs/job_assignment_slot.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -447.0
margin_bottom = -568.0
rect_min_size = Vector2( 320, 32 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 384.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_assign" type="Button" parent="HBoxContainer"]
margin_right = 54.0
margin_bottom = 32.0
text = "Assign"

[node name="slot_icon" type="TextureRect" parent="HBoxContainer"]
visible = false
margin_left = 132.0
margin_right = 164.0
margin_bottom = 32.0

[node name="slot_name" type="Label" parent="HBoxContainer"]
visible = false
margin_left = 168.0
margin_top = 9.0
margin_right = 282.0
margin_bottom = 23.0
text = "{{ Person Name }}"

[node name="slot_effects" type="Label" parent="HBoxContainer"]
visible = false
margin_left = 286.0
margin_top = 9.0
margin_right = 384.0
margin_bottom = 23.0
text = "{{ Slot Effects }}"

[connection signal="pressed" from="HBoxContainer/button_assign" to="." method="_on_button_assign_pressed"]
